--- a/index.html
+++ b/index.html
@@ -21,17 +21,15 @@
             <p class="container--topic__datetime"></p>
             <button class="container--topic__button">Leave A Comment</button>
             <div class="form-popup" id="commentForm">
-                <h2>What do you say abou this opinion?</h2>
+                <h2>What do you say about this opinion?</h2>
                 <label>Support
             <input type="radio" name="commentType" value="support" />
             <input type="radio" name="commentType" value="reject" /> Reject
           </label>
-
                 <textarea name="text" id="text" placeholder="Write your comments here..."></textarea>
                 <label>
             What is your name? <input type="text" name="name" id="name" />
           </label>
-
                 <div class="buttons">
                     <button type="reset" id="reset">Reset</button>
                     <button type="submit" id="submit">Submit</button>
@@ -41,8 +39,8 @@
         <section class="container--commnets"></section>
     </main>
     <footer></footer>
-
-    <script type="text/javascript" src="leaveComment.js"></script>
+    <script src="data.js"></script>
+    <script src="leaveComment.js"></script>
 </body>
 
 </html>
